# libframe

./: .gitignore  404.html  CMakeLists.txt  CODEX.md  README.md  SKILL.md  build.sh  mkdocs.yml  search.html  sitemap.xml
about/: index.html
app/: CMakeLists.txt  calibrate_camera.cpp  capture_charuco.cpp  isp.cpp  main.c  main.cpp  raytrace.cpp  read_pi_temp.cpp  read_webcams.cpp  read_webcams_opencv.cpp  shader.h
docs/: writeup.tex
include/: libframe.h  neural.h  pinhole.h  raw.h  ray.h
libframe_c/: CMakeLists.txt  build.sh
libframe_c/app/: CMakeLists.txt
libframe_c/include/: pinhole.h  ppm.h  raw.h  transform.h
libframe_c/src/: neural.c  pinhole.cpp  ray.cpp  shader.cpp  transform.c
libframe_cpp/: .gitignore  rebuild.sh
libframe_cpp/include/: dead_pixel_correction.h  ray.h  renderer.h
libframe_cpp/src/: dead_pixel_correction.c  fragment_shader.glsl  renderer.cpp
libframe_js/html/: 1_wasm_quadrotor.html  2_rerun.html
libframe_js/js/1_wasm_quadrotor/: main.js  sim_worker.js
libframe_py/: README.md
libframe_py/src/: 1_display_image.py  2_get_webcam_video.py  3_get_file_video.py  4_save_webcam_video.py  7_wasm_example.py
page/: index.html
src/: CMakeLists.txt  neural.c  ppm.c  raw.c  transform.c
src/cpp_files/: pinhole.cpp  ray.cpp  vertex_shader.glsl
